--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/crypto-js": "^4.1.1",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
     "css-loader": "^6.7.1",
@@ -29,6 +30,7 @@
     "react-router-dom": "^6.3.0",
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.8",
